Added Intent for Med. and Hyd. / Hydration Activity Created

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,66 +9,30 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.ryanrood.lapp.MainActivity">
 
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Medication"
+        android:id="@+id/Medication"
+        android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true">
+        android:layout_marginTop="121dp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Med:"
-            android:id="@+id/textView"
-            android:layout_row="0"
-            android:layout_column="0" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hydration"
+        android:id="@+id/Hydration"
+        android:layout_below="@+id/Medication"
+        android:layout_alignStart="@+id/Medication" />
 
-        <EditText
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/editText"
-            android:layout_row="0"
-            android:layout_column="1" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Leukemia Organization Application"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Dose:"
-            android:id="@+id/textView2"
-            android:layout_row="1"
-            android:layout_column="0" />
-
-        <EditText
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/editText2"
-            android:layout_row="1"
-            android:layout_column="1" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Frequency:"
-            android:id="@+id/textView3"
-            android:layout_row="2"
-            android:layout_column="0" />
-
-        <EditText
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/editText3"
-            android:layout_row="2"
-            android:layout_column="1" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Add To Data Base"
-            android:id="@+id/button"
-            android:layout_row="10"
-            android:layout_column="1" />
-    </GridLayout>
 </RelativeLayout>
