--- a/app/src/main/res/layout/activity_hydration2.xml
+++ b/app/src/main/res/layout/activity_hydration2.xml
@@ -64,6 +64,7 @@
         android:layout_height="wrap_content"
         android:text="Add to daily totals"
         android:id="@+id/button"
-        android:layout_centerVertical="true"
+        android:layout_marginBottom="72dp"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
